[package]
name = "leptos_theme"
version = "0.1.1"
edition = "2021"
exclude = ["example/"]
description="A theme abstraction for leptos applications."
license="MIT"
repository="https://github.com/friendlymatthew/leptos-theme"
authors = ["Matthew Kim"]
keywords=["leptos", "themes", "theme-switcher"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
leptos-use = { version = "0.10.1", features = ["serde"] }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66" }
serde = { version = "1.0.194" }
serde_json = "1.0.111"
rstest = "0.18.2"
